# TUI-do

./: .gitignore  LICENSE  README.md  SETUP.md  api.py  config.py  db.py  main.py  notifications.py  pyproject.toml  requirements.txt  theme.py  tuido.bat  tuido.sh
backends/: __init__.py  base.py  json_backend.py  notion_backend.py
tests/: conftest.py  test_config.py  test_db.py
ui/: app.py  app.tcss  screens.py  widgets.py
