[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tuido"
version = "1.0.0"
description = "Offline-first terminal Kanban board with optional Notion sync"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Keerthi Pradyun", email = "23mcce27@uohyd.ac.in" }]
requires-python = ">=3.10"
keywords = ["kanban", "terminal", "tui", "notion", "productivity", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "textual>=0.47.0",
    "notion-client>=2.0.0,<3.0.0",
    "httpx>=0.27.0",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tuido = "main:run"

[project.urls]
Homepage = "https://github.com/keerthipradyun/TUI-do"
"Bug Tracker" = "https://github.com/keerthipradyun/TUI-do/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui*", "backends*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
